--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+
+
+    <string-array name="drawerListData">
+
+        <item>News</item>
+
+        <item>Repository</item>
+
+        <item>Friends</item>
+
+    </string-array>
+
+
+
 </resources>
