--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="fail_load">Fail! Check the Network</string>
-
+    <string name="icon_star" translatable="false">\uf02a</string>
+    <string name="icon_email" translatable="false">\uf03b</string>
 
     <string-array name="drawerListData">
 
