--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="fail_load">Fail! Check the Network</string>
+    <string name="fail_loadMore">Fail to load more! Check the Network</string>
     <string name="icon_star" translatable="false">\uf02a</string>
     <string name="icon_email" translatable="false">\uf03b</string>
     <string name="icon_locate" translatable="false">\uf060</string>
@@ -13,6 +14,7 @@
     <string name="icon_join" translatable="false">\uf046</string>
     <string name="icon_fork" translatable="false">\uf020</string>
     <string name="icon_repo" translatable="false">\uf001</string>
+    <string name="icon_push" translatable="false">\uf01f</string>
 
     <string-array name="drawerListData">
 
