--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="icon_fork" translatable="false">\uf020</string>
     <string name="icon_repo" translatable="false">\uf001</string>
     <string name="icon_push" translatable="false">\uf01f</string>
+    <string name="icon_pullRequest" translatable="false">\uf009</string>
+
 
     <string-array name="drawerListData">
 
