--- a/httpknife/src/main/res/values/strings.xml
+++ b/httpknife/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">httpknife</string>
+    <string name="network_error">Check the Network or Try later</string>
 </resources>
