--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
     <string name="icon_code" translatable="false">\uf05f</string>
     <string name="icon_issue" translatable="false">\uf026</string>
     <string name="icon_tag" translatable="false">\uf015</string>
+    <string name="title_activity_image">ImageActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 
 
 
