--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="title_activity_image">ImageActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_search">SearchActivity</string>
 
 
 
