add repo search

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -41,6 +41,8 @@
     </string-array>
     <string name="search_user">搜索用户</string>
     <string name="search_repository">搜索项目</string>
+    <string name="search_result_count">个搜索结果</string>
+
 
 
     <!--ttf字体编号 -->
