--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,6 +5,7 @@
     <!--APP名称，界面名称-->
     <string name="app_name">WeGit</string>
 
+    <string name="title_activity_login">登陆</string>
     <string name="title_activity_main">WeGit</string>
     <string name="title_activity_user_info">UserInfoActivity</string>
     <string name="title_activity_fo">FoActivity</string>
@@ -31,11 +32,20 @@
     <string name="fail_unfollow">取消关注失败： </string>
     <string name="fail_load_relation">加载好友关系失败</string>
     <string name="fail_load_userInfo">加载用户信息失败： </string>
+    <string name="fail_auth_user">初始化个人信息失败，请检查网络或者稍后重试。</string>
     <string name="fail_load_content">获取文件内容</string>
+    <string name="try_again">重试</string>
+    <string name="fail_init_warning">初始化失败</string>
 
 
     <!--说明-->
     <string name="search_warning">你可以输入关键字搜索用户或项目，，，</string>
+    <string name="username_or_email">用户名或邮箱</string>
+    <string name="password">密码</string>
+
+
+    <!--Button Text-->
+    <string name="btn_login">登陆</string>
 
     <!--Array-->
     <string-array name="search_type">
