--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -28,14 +28,21 @@
     <string name="developing">该模块正在开发中</string>
     <string name="network_error">请检查网络，或稍后重试</string>
     <string name="auth_error">账号密码错误</string>
+    <string name="over_auth_error">登陆失败次数太多，请稍后再试</string>
     <string name="fail_follow">关注失败： </string>
     <string name="fail_unfollow">取消关注失败： </string>
     <string name="fail_load_relation">加载好友关系失败</string>
     <string name="fail_load_userInfo">加载用户信息失败： </string>
     <string name="fail_auth_user">初始化个人信息失败，请检查网络或者稍后重试。</string>
     <string name="fail_load_content">获取文件内容</string>
-    <string name="try_again">重试</string>
     <string name="fail_init_warning">初始化失败</string>
+
+
+    <!--提醒-->
+    <string name="try_again">重试</string>
+    <string name="input_complete">请输入账号密码</string>
+    <string name="login">登陆中...</string>
+
 
 
     <!--说明-->
