improve userinfo ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,12 @@
     <string name="cancel">CANCEL</string>
 
 
+
+    <!-- USER INFO -->
+    <string name="email">Email</string>
+    <string name="location">Location</string>
+    <string name="blog">Blog</string>
+    <string name="join">Join</string>
+    <string name="company">Company</string>
+
 </resources>
