--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,14 +66,30 @@
     <!--Language-->
     <string-array name="language">
         <item>All language</item>
+        <item>Unknown Language</item>
         <item>Javascript</item>
         <item>Java</item>
         <item>CSS</item>
+        <item>C</item>
         <item>C++</item>
         <item>Python</item>
         <item>Html</item>
         <item>Go</item>
     </string-array>
+
+    <string-array name="language_param">
+        <item></item>
+        <item>unknown</item>
+        <item>Javascript</item>
+        <item>java</item>
+        <item>css</item>
+        <item>c</item>
+        <item>cpp</item>
+        <item>python</item>
+        <item>html</item>
+        <item>go</item>
+    </string-array>
+
 
     <string name="search">Search</string>
     <string name="search_user">Search User</string>
