--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -78,6 +78,7 @@
     <!--Commom-->
     <string name="ok">确认</string>
     <string name="cancel">取消</string>
+    <string name="language">语言</string>
 
 
 </resources>
